--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:  # 👉 esto te permite dispararlo manualmente desde GitHub
 
 jobs:
   test:
