--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./site
-#          commit_message: "Deploy site: ${{ github.sha }}"
+          commit_message: "Deploy site: ${{ github.sha }}"
